--- a/docker/virtual-host.conf
+++ b/docker/virtual-host.conf
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
     ServerName andrii-dve-css.com
     ServerAlias 
-    DocumentRoot /var/www/html//
+    DocumentRoot /var/www/html/pub/
     ServerAdmin admin@example.com
     UseCanonicalName Off
     ErrorLog /var/www/html/var/log/apache_error.log
-    <Directory /var/www/html//>
+    <Directory /var/www/html/pub/>
         AllowOverride All
         Require all granted
     </Directory>
@@ -14,11 +14,11 @@
 <VirtualHost *:443>
     ServerName andrii-dve-css.com
     ServerAlias 
-    DocumentRoot /var/www/html//
+    DocumentRoot /var/www/html/pub/
     ServerAdmin admin@example.com
     UseCanonicalName Off
     ErrorLog /var/www/html/var/log/apache_error.log
-    <Directory /var/www/html//>
+    <Directory /var/www/html/pub/>
         AllowOverride All
         Require all granted
     </Directory>
